# vts-browser-unity-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/Vts/: .gitignore
src/Vts/Demos/: Collisions.unity  Coordinates.unity  FreeFlight.unity  LoggingTiles.unity  Navigation.unity  ObjectPlacement.unity  Searching.unity  Shaders.unity  ShiftingOrigin.unity  Splitscreen.unity  VtsNavigation.unity
src/Vts/Demos/Resources/: VtsColorBlue.mat  VtsColorGreen.mat  VtsColorRed.mat  VtsLoggingOpaque.prefab  VtsLoggingTransparent.prefab
src/Vts/Demos/Scripts/: VtsCursorCoordinates.cs  VtsFreeFlightController.cs  VtsLoggingPrefab.cs  VtsObjectCoordinates.cs  VtsObjectPlacement.cs  VtsRigidBodyActivate.cs  VtsSearch.cs
src/Vts/Documentation/: readme.md
src/Vts/Resources/: VtsAtmosphereShader.cginc  VtsBackgroundMaterial.mat  VtsColliderMaterial.physicMaterial  VtsUnlitMaterial.mat  VtsUnlitShader.shader
src/Vts/Resources/Materials/: VtsBackground.mat  VtsCollider.physicMaterial  VtsLitMaterial.mat  VtsLitOpaque.mat  VtsLitTransparent.mat  VtsShadowedOpaque.mat  VtsShadowedTransparent.mat  VtsSurfaceOpaque.mat  VtsSurfaceTransparent.mat  VtsUnlitOpaque.mat  VtsUnlitTransparent.mat
src/Vts/Resources/Prefabs/: VtsCollider.prefab  VtsColliderPrefab.prefab  VtsLitOpaque.prefab  VtsLitRenderPrefab.prefab  VtsLitTransparent.prefab  (+8 more)
src/Vts/Scripts/: Browser  VtsCameraCmdBufs.cs  VtsCameraObjects.cs  VtsColliderProbe.cs  VtsMap.cs  VtsMapMakeLocal.cs  VtsMapNavigation.cs  VtsMapShiftingOrigin.cs  VtsNavigation.cs  VtsObjectShiftingOrigin.cs  VtsRigidBodyActivate.cs  VtsRigidBodyController.cs
src/vts/: VtsCamera.cs  VtsLog.cs  VtsMap.cs  VtsMaterial.mat  VtsMouseControls.cs  VtsResources.cs  VtsSurfaceShader.shader  VtsUtil.cs  browser  vtsShaderCollection.shadervariants
src/vts/Components/: VtsCamera.cs  VtsMap.cs
src/vts/Materials/: VtsShaderCollection.shadervariants  VtsUnlitMaterial.mat  VtsUnlitShader.shader
src/vts/Utilities/: VtsResources.cs  VtsUtil.cs
src/vts/atmosphere/: vtsAtmBackgroundShader.shader  vtsAtmShader.cginc  vtsBackgroundMaterial.mat
src/vts/components/: FreeFlightController.cs  VtsCamera.cs  VtsMap.cs  VtsMapMakeLocal.cs  VtsMapNavigation.cs  VtsNavigation.cs
src/vts/scenes/: FreeFlight.unity  VtsNavigation.unity
src/vts/scripts/: FreeFlightController.cs  VtsCamera.cs  VtsCameraCmdBufs.cs  VtsColliderProbe.cs  VtsMap.cs  VtsMapMakeLocal.cs  VtsResources.cs  VtsUtil.cs
src/vts/utilities/: VtsCameraBase.cs  VtsLog.cs  VtsResources.cs  VtsUtil.cs
(+54 files in other folders)
